# incremental-ph

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: basic_usage.py
src/incremental_ph/: __init__.py  core.py
tests/: test_sanity.py
